# proto/gen/api/v1/activity_service_grpc.pb.go
@@ -1,0 +1,203 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             (unknown)
+// source: api/v1/activity_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	ActivityService_GetRecentActivity_FullMethodName  = "/monotreme.api.v1.ActivityService/GetRecentActivity"
+	ActivityService_GetActivitySummary_FullMethodName = "/monotreme.api.v1.ActivityService/GetActivitySummary"
+	ActivityService_ListActivities_FullMethodName     = "/monotreme.api.v1.ActivityService/ListActivities"
+)
+
+// ActivityServiceClient is the client API for ActivityService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type ActivityServiceClient interface {
+	// GetRecentActivity returns recent activity data for the dashboard
+	GetRecentActivity(ctx context.Context, in *GetRecentActivityRequest, opts ...grpc.CallOption) (*GetRecentActivityResponse, error)
+	// GetActivitySummary returns summary statistics for the workspace
+	GetActivitySummary(ctx context.Context, in *GetActivitySummaryRequest, opts ...grpc.CallOption) (*GetActivitySummaryResponse, error)
+	// ListActivities returns a paginated list of activities with filtering
+	ListActivities(ctx context.Context, in *ListActivitiesRequest, opts ...grpc.CallOption) (*ListActivitiesResponse, error)
+}
+
+type activityServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewActivityServiceClient(cc grpc.ClientConnInterface) ActivityServiceClient {
+	return &activityServiceClient{cc}
+}
+
+func (c *activityServiceClient) GetRecentActivity(ctx context.Context, in *GetRecentActivityRequest, opts ...grpc.CallOption) (*GetRecentActivityResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetRecentActivityResponse)
+	err := c.cc.Invoke(ctx, ActivityService_GetRecentActivity_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *activityServiceClient) GetActivitySummary(ctx context.Context, in *GetActivitySummaryRequest, opts ...grpc.CallOption) (*GetActivitySummaryResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetActivitySummaryResponse)
+	err := c.cc.Invoke(ctx, ActivityService_GetActivitySummary_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *activityServiceClient) ListActivities(ctx context.Context, in *ListActivitiesRequest, opts ...grpc.CallOption) (*ListActivitiesResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListActivitiesResponse)
+	err := c.cc.Invoke(ctx, ActivityService_ListActivities_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ActivityServiceServer is the server API for ActivityService service.
+// All implementations must embed UnimplementedActivityServiceServer
+// for forward compatibility.
+type ActivityServiceServer interface {
+	// GetRecentActivity returns recent activity data for the dashboard
+	GetRecentActivity(context.Context, *GetRecentActivityRequest) (*GetRecentActivityResponse, error)
+	// GetActivitySummary returns summary statistics for the workspace
+	GetActivitySummary(context.Context, *GetActivitySummaryRequest) (*GetActivitySummaryResponse, error)
+	// ListActivities returns a paginated list of activities with filtering
+	ListActivities(context.Context, *ListActivitiesRequest) (*ListActivitiesResponse, error)
+	mustEmbedUnimplementedActivityServiceServer()
+}
+
+// UnimplementedActivityServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedActivityServiceServer struct{}
+
+func (UnimplementedActivityServiceServer) GetRecentActivity(context.Context, *GetRecentActivityRequest) (*GetRecentActivityResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetRecentActivity not implemented")
+}
+func (UnimplementedActivityServiceServer) GetActivitySummary(context.Context, *GetActivitySummaryRequest) (*GetActivitySummaryResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetActivitySummary not implemented")
+}
+func (UnimplementedActivityServiceServer) ListActivities(context.Context, *ListActivitiesRequest) (*ListActivitiesResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListActivities not implemented")
+}
+func (UnimplementedActivityServiceServer) mustEmbedUnimplementedActivityServiceServer() {}
+func (UnimplementedActivityServiceServer) testEmbeddedByValue()                         {}
+
+// UnsafeActivityServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ActivityServiceServer will
+// result in compilation errors.
+type UnsafeActivityServiceServer interface {
+	mustEmbedUnimplementedActivityServiceServer()
+}
+
+func RegisterActivityServiceServer(s grpc.ServiceRegistrar, srv ActivityServiceServer) {
+	// If the following call pancis, it indicates UnimplementedActivityServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&ActivityService_ServiceDesc, srv)
+}
+
+func _ActivityService_GetRecentActivity_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetRecentActivityRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ActivityServiceServer).GetRecentActivity(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ActivityService_GetRecentActivity_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ActivityServiceServer).GetRecentActivity(ctx, req.(*GetRecentActivityRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ActivityService_GetActivitySummary_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetActivitySummaryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ActivityServiceServer).GetActivitySummary(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ActivityService_GetActivitySummary_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ActivityServiceServer).GetActivitySummary(ctx, req.(*GetActivitySummaryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ActivityService_ListActivities_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListActivitiesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ActivityServiceServer).ListActivities(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ActivityService_ListActivities_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ActivityServiceServer).ListActivities(ctx, req.(*ListActivitiesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ActivityService_ServiceDesc is the grpc.ServiceDesc for ActivityService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ActivityService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "monotreme.api.v1.ActivityService",
+	HandlerType: (*ActivityServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetRecentActivity",
+			Handler:    _ActivityService_GetRecentActivity_Handler,
+		},
+		{
+			MethodName: "GetActivitySummary",
+			Handler:    _ActivityService_GetActivitySummary_Handler,
+		},
+		{
+			MethodName: "ListActivities",
+			Handler:    _ActivityService_ListActivities_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/activity_service.proto",
+}
